; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_fetch.c_set_option.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_fetch.c_set_option.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.transport = type { i32 }

@.str = private unnamed_addr constant [43 x i8] c"Option \22%s\22 value \22%s\22 is not valid for %s\00", align 1
@.str.1 = private unnamed_addr constant [31 x i8] c"Option \22%s\22 is ignored for %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.transport*, i8*, i8*)* @set_option to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_option(%struct.transport* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.transport*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store %struct.transport* %0, %struct.transport** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load %struct.transport*, %struct.transport** %4, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @transport_set_option(%struct.transport* %8, i8* %9, i8* %10)
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %7, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %22

14:                                               ; preds = %3
  %15 = call i32 @_(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0))
  %16 = load i8*, i8** %5, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = load %struct.transport*, %struct.transport** %4, align 8
  %19 = getelementptr inbounds %struct.transport, %struct.transport* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @die(i32 %15, i8* %16, i8* %17, i32 %20)
  br label %22

22:                                               ; preds = %14, %3
  %23 = load i32, i32* %7, align 4
  %24 = icmp sgt i32 %23, 0
  br i1 %24, label %25, label %32

25:                                               ; preds = %22
  %26 = call i32 @_(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0))
  %27 = load i8*, i8** %5, align 8
  %28 = load %struct.transport*, %struct.transport** %4, align 8
  %29 = getelementptr inbounds %struct.transport, %struct.transport* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @warning(i32 %26, i8* %27, i32 %30)
  br label %32

32:                                               ; preds = %25, %22
  ret void
}

declare dso_local i32 @transport_set_option(%struct.transport*, i8*, i8*) #1

declare dso_local i32 @die(i32, i8*, i8*, i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @warning(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
